--- a/jenkinsfile
+++ b/jenkinsfile
@@ -39,7 +39,7 @@ pipeline {
         stage('Test Trivy') {
             steps {
                 script {
-                    sh 'trivy image openplc:latest'
+                    sh 'trivy --server http://trivy-server:4954 openplc:latest'
                 }
             }
         }
