--- a/jenkinsfile
+++ b/jenkinsfile
@@ -36,10 +36,17 @@ pipeline {
             }
         }
         */
-        stage('Test Trivy') {
+        stage('Scan Docker Image') {
             steps {
                 script {
-                    sh 'trivy image --server http://trivy-server:4954 openplc:latest'
+                    sh '''
+                    TIMESTAMP=$(date +%Y%m%d%H%M%S)
+                    OUTPUT_FILE=${WORKSPACE}/trivy-results-$TIMESTAMP.json
+
+                    trivy image --server ${TRIVY_SERVER} --format json --output $OUTPUT_FILE --severity HIGH,CRITICAL ${IMAGE_NAME}:${IMAGE_TAG}
+
+                    ls -lah ${WORKSPACE}
+                    '''
                 }
             }
         }
