--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,6 +8,7 @@ pipeline {
         NEXUS_REPO = "myregistry.local/docker-repo" 
         NEXUS_URL = "https://myregistry.local" 
         MONITORING_NETWORK = "monitoring-net"
+        TIMESTAMP = sh(script: 'date +%Y%m%d%H%M%S', returnStdout: true).trim()
     }
 
     stages {
@@ -39,14 +40,12 @@ pipeline {
         stage('Scan Docker Image') {
             steps {
                 script {
-                    sh '''
-                    TIMESTAMP=$(date +%Y%m%d%H%M%S)
-                    OUTPUT_FILE=${WORKSPACE}/trivy-results-$TIMESTAMP.json
+                    OUTPUT_FILE="${WORKSPACE}/trivy-results-${env.TIMESTAMP}.json"
 
-                    trivy image --server ${TRIVY_SERVER} --format json --output $OUTPUT_FILE --severity HIGH,CRITICAL ${IMAGE_NAME}:${IMAGE_TAG}
-
+                    sh """
+                    trivy image --server ${TRIVY_SERVER} --format json --output ${OUTPUT_FILE} --severity HIGH,CRITICAL ${IMAGE_NAME}:${IMAGE_TAG}
                     ls -lah ${WORKSPACE}
-                    '''
+                    """
                 }
             }
         }
@@ -55,13 +54,13 @@ pipeline {
             steps {
                 script {
                     withCredentials([usernamePassword(credentialsId: '7211db4a-9c31-434c-8a12-44e0667143fb', usernameVariable: 'NEXUS_USER', passwordVariable: 'NEXUS_PASS')]) {
-                        sh '''
-                        FILE_PATH=${WORKSPACE}/trivy-results-${TIMESTAMP}.json
+                        FILE_PATH="${WORKSPACE}/trivy-results-${env.TIMESTAMP}.json"
                         
-                        curl -k -u $NEXUS_USER:$NEXUS_PASS \
-                          --upload-file $FILE_PATH \
-                          http://192.168.2.143:8081/repository/trivy-results/trivy-results-${TIMESTAMP}.json
-                        '''
+                        sh """
+                        curl -k -u \$NEXUS_USER:\$NEXUS_PASS \
+                          --upload-file \$FILE_PATH \
+                          http://192.168.2.143:8081/repository/trivy-results/trivy-results-${env.TIMESTAMP}.json
+                        """
                     }
                 }
             }
