--- a/jenkinsfile
+++ b/jenkinsfile
@@ -56,11 +56,11 @@ pipeline {
                     withCredentials([usernamePassword(credentialsId: '7211db4a-9c31-434c-8a12-44e0667143fb', usernameVariable: 'NEXUS_USER', passwordVariable: 'NEXUS_PASS')]) {
                         FILE_PATH="${WORKSPACE}/trivy-results-${env.TIMESTAMP}.json"
                         
-                        sh '''
+                        sh """
                         curl -k -u \$NEXUS_USER:\$NEXUS_PASS \
-                          --upload-file \$FILE_PATH \
+                          --upload-file ${FILE_PATH} \
                           http://192.168.2.143:8081/repository/trivy-results/trivy-results-${env.TIMESTAMP}.json
-                        '''
+                        """
                     }
                 }
             }
