--- a/jenkinsfile
+++ b/jenkinsfile
@@ -86,7 +86,7 @@ pipeline {
                     echo "Starting OWASP ZAP Security Scan..."
                     sh """
                     docker run --rm --network=${MONITORING_NETWORK} \
-                      -v \$(pwd):/zap/wrk \
+                      -v \$(pwd):/zap/wrk/:rw \
                       ghcr.io/zaproxy/zaproxy:stable \
                       zap-baseline.py -t http://openplc:8080 -r /zap/wrk/zap-report-${env.TIMESTAMP}.html 
                     """
