--- a/jenkinsfile
+++ b/jenkinsfile
@@ -88,7 +88,7 @@ pipeline {
                     docker run --rm --network=${MONITORING_NETWORK} --user root\
                       -v \$(pwd):/zap/wrk/:rw \
                       ghcr.io/zaproxy/zaproxy:stable \
-                      zap-baseline.py -t http://openplc:8080 -r zap-report-${env.TIMESTAMP}.html 
+                      zap-baseline.py -t http://openplc:8080 -r zap-report-${env.TIMESTAMP}.html || true
                     """
                 }
             }
