--- a/jenkinsfile
+++ b/jenkinsfile
@@ -85,7 +85,7 @@ pipeline {
                 script {
                     echo "Starting OWASP ZAP Security Scan..."
                     sh """
-                    docker run --rm --network=${MONITORING_NETWORK} \
+                    docker run --rm --user root --network=${MONITORING_NETWORK} \
                       -v \$WORKSPACE:/zap/wrk \
                       ghcr.io/zaproxy/zaproxy:stable \
                       zap-baseline.py -t http://openplc:8080 -r /zap/wrk/zap-report-${env.TIMESTAMP}.html
