--- a/jenkinsfile
+++ b/jenkinsfile
@@ -37,16 +37,6 @@ pipeline {
             }
         }
         */
-        
-        stage('Test sudo') {
-            steps {
-                script {
-                    sh "sudo -n whoami"
-                }
-            }
-        }
-    
-
         stage('Scan Docker Image') {
             steps {
                 script {
@@ -95,27 +85,29 @@ pipeline {
                 script {
                     echo "Starting OWASP ZAP Security Scan..."
                     sh """
-                    docker run --rm --user root --network=${MONITORING_NETWORK} \
-                      -v \$WORKSPACE:/zap/wrk/:rw \
+                    docker run --rm --network=${MONITORING_NETWORK} --user 1000:1000 \
+                      -v /var/lib/docker/volumes/jenkins-data/_data/workspace/cra_check_pipeline:/zap/wrk/:rw \
                       ghcr.io/zaproxy/zaproxy:stable \
                       zap-baseline.py -t http://openplc:8080 -r zap-report-${env.TIMESTAMP}.html || true
                     """
-                    // h 'cat zap-debug-${env.TIMESTAMP}.log'
                 }
             }
         }
-        
+        /*
         stage('Upload OWASP ZAP Report to Nexus') {
             steps {
                 script {
-                    echo "Uploading OWASP ZAP Report to Nexus as root with sudo password..."
-                    
-                    withCredentials([
-                        usernamePassword(credentialsId: '7211db4a-9c31-434c-8a12-44e0667143fb', usernameVariable: 'NEXUS_USER', passwordVariable: 'NEXUS_PASS'),
-                        string(credentialsId: 'SUDO_PASS', variable: 'SUDO_PASS')
-                    ]) {
+                    echo "Copying ZAP report to workspace..."
+                    sh """
+                    cp /var/lib/docker/volumes/jenkins-data/_data/workspace/cra_check_pipeline/zap-report-${env.TIMESTAMP}.html \$WORKSPACE/
+                    """
+
+                    echo "Uploading OWASP ZAP Report to Nexus..."
+                    withCredentials([usernamePassword(credentialsId: '7211db4a-9c31-434c-8a12-44e0667143fb', 
+                                                     usernameVariable: 'NEXUS_USER', 
+                                                     passwordVariable: 'NEXUS_PASS')]) {
                         sh """
-                        echo "\$SUDO_PASS" | sudo -S curl -k -u "\$NEXUS_USER:\$NEXUS_PASS" \
+                        curl -k -u "\$NEXUS_USER:\$NEXUS_PASS" \
                           --upload-file "\$WORKSPACE/zap-report-${env.TIMESTAMP}.html" \
                           http://192.168.2.143:8081/repository/owasp-zap-results/zap-report-${env.TIMESTAMP}.html
                         """
@@ -123,7 +115,7 @@ pipeline {
                 }
             }
         }
-
+        */
         stage('Cleanup OpenPLC') {
             steps {
                 script {
@@ -135,7 +127,7 @@ pipeline {
                 }
             }
         }
-
+        
         stage('Push Docker Image to Nexus') {
             steps {
                 script {
