--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,6 +9,7 @@ pipeline {
         NEXUS_URL = "https://myregistry.local" 
         MONITORING_NETWORK = "monitoring-net"
         TIMESTAMP = sh(script: 'date +%Y%m%d%H%M%S', returnStdout: true).trim()
+        HOST_IP = "192.168.2.147" 
     }
 
     stages {
@@ -129,7 +130,7 @@ pipeline {
                         sh """
                         curl -k -u \$NEXUS_USER:\$NEXUS_PASS \
                           --upload-file ${FILE_PATH} \
-                          http://192.168.2.145:8081/repository/trivy-results/trivy-results-${env.TIMESTAMP}.json
+                          http://${HOST_IP}:8081/repository/trivy-results/trivy-results-${env.TIMESTAMP}.json
                         """
                     }
                 }
@@ -145,7 +146,7 @@ pipeline {
                         sh """
                         curl -k -u \$NEXUS_USER:\$NEXUS_PASS \
                         --upload-file ${SBOM_FILE} \
-                         http://192.168.2.145:8081/repository/trivy-sbom/trivy-sbom-${env.TIMESTAMP}.json
+                         http://${HOST_IP}:8081/repository/trivy-sbom/trivy-sbom-${env.TIMESTAMP}.json
                          """
                     }
                 }
@@ -189,7 +190,7 @@ pipeline {
                         sh """
                         sudo -n curl -k -u "\$NEXUS_USER:\$NEXUS_PASS" \
                           --upload-file "/var/jenkins_home/workspace/cra_check_pipeline//zap-report-${env.TIMESTAMP}.html" \
-                          http://192.168.2.145:8081/repository/owasp-zap-results/zap-report-${env.TIMESTAMP}.html
+                          http://${HOST_IP}:8081/repository/owasp-zap-results/zap-report-${env.TIMESTAMP}.html
                         """
                     }
                 }
