--- a/jenkinsfile
+++ b/jenkinsfile
@@ -31,6 +31,7 @@ pipeline {
                 }
             }
         }
+        /*
         stage('Start SonarQube Container') {
             steps {
                 script {
@@ -41,6 +42,9 @@ pipeline {
                     docker run -d --name sonarqube --user 1000:1000 \
                     --network=jenkins \
                     -p 9000:9000 \
+                    -v sonarqube_data:/opt/sonarqube/data \
+                    -v sonarqube_extensions:/opt/sonarqube/extensions \
+                    -v sonarqube_logs:/opt/sonarqube/logs \
                     sonarqube:community
                     echo "Waiting for SonarQube to be ready..."
                     until curl -s http://sonarqube:9000/api/system/status | grep -q '"status":"UP"'; do sleep 5; done
@@ -48,7 +52,7 @@ pipeline {
                 }
             }
         }
-
+        */
         stage('Run SonarQube Scan') {
             steps {
                 script {
@@ -67,7 +71,7 @@ pipeline {
                 }
             }
         }
-
+        
         stage('Export SonarQube Report JSON') {
             steps {
                 script {
@@ -79,6 +83,7 @@ pipeline {
                 }
             }
         }
+
         /*
         stage('Stop SonarQube Container') {
             steps {
