--- a/jenkinsfile
+++ b/jenkinsfile
@@ -71,20 +71,41 @@ pipeline {
                 }
             }
         }
-        
+        stage('Export SonarQube Report JSON') {
+            agent {
+                docker {
+                    image 'curlimages/curl:latest'
+                    network 'jenkins'
+                    args "-v $WORKSPACE:/workspace -w /workspace"
+        }
+    }
+    steps {
+        script {
+            sleep(60)
+            echo "Fetching SonarQube JSON results from within networked container..."
+            sh """
+                curl -s "http://sonarqube:9000/api/issues/search?projectKeys=openplc&ps=500" -o sonarqube-report-${env.TIMESTAMP}.json
+                ls -lah
+            """
+        }
+    }
+}
+
+
+        /*
         stage('Export SonarQube Report JSON') {
             steps {
                 script {
                     sleep(30)
                     echo "Fetching SonarQube JSON results..."
                     sh """
-                    curl -s "http://${HOST_IP}:9000/api/issues/search?projectKeys=openplc&ps=500" -o ${WORKSPACE}/sonarqube-report-${env.TIMESTAMP}.json
+                    curl -s "http://sonarqube:9000/api/issues/search?projectKeys=openplc&ps=500" -o ${WORKSPACE}/sonarqube-report-${env.TIMESTAMP}.json
                     ls -lah ${WORKSPACE}
                     """
                 }
             }
         }
-
+        */
         /*
         stage('Stop SonarQube Container') {
             steps {
