--- a/jenkinsfile
+++ b/jenkinsfile
@@ -75,12 +75,15 @@ pipeline {
         stage('Export SonarQube Report JSON') {
             steps {
                 script {
-                    sleep(60)
+                    sleep(30)
                     echo "Fetching SonarQube JSON results..."
-                    sh """
-                    curl -s "http://sonarqube:9000/api/issues/search?projectKeys=openplc&ps=500" -o ${WORKSPACE}/sonarqube-report-${env.TIMESTAMP}.json
-                    ls -lah ${WORKSPACE}
-                    """
+                    withCredentials([string(credentialsId: 'sonarqube-token', variable: 'SONAR_TOKEN')]) {
+                        sh """
+                            curl -u $SONAR_TOKEN: -s "http://sonarqube:9000/api/issues/search?componentKeys=openplc&ps=500" \\
+                            -o ${WORKSPACE}/sonarqube-report-${env.TIMESTAMP}.json
+                        """
+                    }
+                    echo "SonarQube JSON report saved to: ${WORKSPACE}/sonarqube-report-${env.TIMESTAMP}.json"
                 }
             }
         }
